# training

./: .gitignore  AI开发工具与框架完整操作手册.md  AI开发工具安装指南.md  README.md  team-fullstack-zh.txt
1.riper-5/: README.md
1.riper-5/cpp/: DEV_PLAN.md  README.md
1.riper-5/cpp/backend/: CMakeLists.txt
1.riper-5/cpp/backend/src/: main.cpp
1.riper-5/cpp/backend/src/application/: CategoryService.cpp  CategoryService.hpp  ContentService.cpp  ContentService.hpp
1.riper-5/cpp/backend/src/domain/category/: Category.hpp  ICategoryRepository.hpp
1.riper-5/cpp/backend/src/domain/content/: Content.hpp  ContentStatus.hpp  IContentRepository.hpp
1.riper-5/cpp/backend/src/infrastructure/: CategoryRepositoryInMemory.cpp  CategoryRepositoryInMemory.hpp  ContentRepositoryInMemory.cpp  ContentRepositoryInMemory.hpp  IMarkdownRenderer.hpp  SimpleMarkdownRenderer.cpp  SimpleMarkdownRenderer.hpp
1.riper-5/cpp/backend/src/presentation/: CmsRequestHandler.cpp  CmsRequestHandler.hpp  CmsRequestHandlerFactory.hpp
1.riper-5/cpp/backend/tests/: unit_repos.cpp
1.riper-5/doc/: SPEC.md
1.riper-5/java/: README.md  deploy.cmd  deploy.sh  shutdown.cmd  shutdown.sh
1.riper-5/python/: README.md
2.bmad/: README.md
2.bmad/cpp/: README.md
2.bmad/doc/: MVP.md  迭代1.md
2.bmad/java/: cms.cmd  (+2 more)
3.spec-kit-openspec/: README.md
4.omo-superpowers/: README.md
5.agent/: .gitignore  README.md  model.py  qa_agent.py  qa_spec.md  rag_spec.md  requirements.txt  spec.md
backend/: cms.db  pyproject.toml
backend/app/: crud.py  database.py  main.py  schemas.py
frontend/: package-lock.json  package.json
(+433 files in other folders)
